--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,7 @@
                 <!-- Bootstrap JavaScript -->
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-        <script type="text/javascript" src="{{ url_for('static',filename='scrollpage.js') }}"></script>
+       
 
         <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
@@ -29,18 +29,7 @@
         <script>
             var map = new Datamap({element: document.getElementById('mapcontainer')});
         </script>
-        <script>
-            var lastScrollTop = 0;
-            $("div").scroll(function (event) {
-                var st = $(this).scrollTop();
-                if (st > lastScrollTop) {
-            $('img').animate({top: '-=10'}, 10);
-                } else {
-            $('img').animate({top: '+=10'}, 10);
-                }
-                lastScrollTop = st;
-            });
-        </script>
+      
         <script>
             /* When the user clicks on the button, toggle between hiding and showing the dropdown content */
 
@@ -48,7 +37,7 @@
 
         </script>
     </head>
-    <body onLoad=pageScroll()>
+    <body >
     <div id="wholepage">
     <div id="top">
         <a href="/"><img class="logo" src="{{ url_for('static',filename='img/logo.png') }}" alt="Global Health Impact" width="100px" /></a>
@@ -261,34 +250,7 @@
         <div class="narrow">
             {% block content %}{% endblock %}
         </div>
-        {% if scrolling == 1 %}
-        <style>
-
-            @keyframes heightup {
-                from {top: calc(100vw * 0.506 + 110px);}
-                to {top: calc(25vw * 0.506 + 110px);}
-            }
-            @keyframes navup {
-                from {height: calc(100vw * 0.506 + 70px);}
-                to {height: calc(25vw * 0.506 + 24px);}
-            }
-            .height { animation-name: heightup; animation-duration: 2s; top: calc(25vw * 0.506 + 110px);}
-            #navigator { animation-name: navup; animation-duration: 2s; height: calc(25vw * 0.506 + 24px);}
-
-        </style>
-        {% endif %}
-        {% if scrolling == 2 %}
-        <style>
-
-            @keyframes heightup {
-                from {top: calc(100vw * 0.506 + 110px);}
-                to {top: calc(25vw * 0.506 + 110px);}
-            }
-
-            .height { animation-name: heightup; animation-duration: 2s; top: calc(25vw * 0.506 + 110px);}
-
-        </style>
-        {% endif %}
+      
             <div class="foot">
             <table width=100%;>
                 <tr valign="middle">
