--- a/templates/index.html
+++ b/templates/index.html
@@ -50,14 +50,12 @@
         <div class="contentbox">
             <p class="redtxt">LEARN MORE:</p><br>
             <p class="txtcontent"><b>Check out</b> this video from Binghamton University for a brief presentation on the Global Health Impact project. Professor Nicole Hassoun introduces the Index, some possible uses for it, and explains the insight behind it.</p>
-            <video width="100%" height="300" poster="static/img/videothumbnail.png" controls="">
-                <source src="static/img/binghamtonPresentation.mp4" type="video/mp4">
-            </video>
+          <iframe width="100%" height="300" src="https://www.youtube.com/embed/HmZPHqz7xUQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
     </div>
     <div class="col-sm-6">
         <div class="contentbox">
-            <p class="redtxt">INTRO TO THE INDEX:</p><br>
+            <p class="bluetxt">INTRO TO THE INDEX:</p><br>
             <p class="txtcontent"><b>Check out</b> this presentation for an introduction to the Indexes. Here you can see some of the data that goes into the model. For more information check out our <em>Resources, Reports, and Methodology.</em></p><br><br>
             <iframe id="iframe_container" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" width=100% height=200px src="https://prezi.com/embed/r9kwud5nhsj8/?bgcolor=ffffff&amp;lock_to_path=0&amp;autoplay=0&amp;autohide_ctrls=0&amp;landing_data=bHVZZmNaNDBIWnNjdEVENDRhZDFNZGNIUE1lNjhCRUpSbVVNaldpOExIVTNYS1YxcHFaaHFGQ1lSdkdOM01xRUZFOD0&amp;landing_sign=t_-zvhLxW_pfDKaw-xoUzy64VD0DwVqSteTWZ3Jtak8"></iframe>
         </div>
