--- a/templates/methodology.html
+++ b/templates/methodology.html
@@ -90,30 +90,24 @@
             <table id="reporttab">
                 <tr>
                     <td id="paperthumb">
-                        <div style="width:300px"> <strong style="display:block;margin:12px 0 4px"><a href="http://slideplayer.com/slide/5280237/" title="Malaria Drugs Spreadsheet Documentation. General Information Link to spreadsheet: https://docs.google.com/a/binghamton.edu/spreadsheet/cc c?key=0Ag8gS12PpxX2dF82NS1CLVhwd1RDSjhiMnFpd." target="_blank">Malaria Drugs Spreadsheet Documentation. General Information Link to spreadsheet: https://docs.google.com/a/binghamton.edu/spreadsheet/cc c?key=0Ag8gS12PpxX2dF82NS1CLVhwd1RDSjhiMnFpd.</a></strong><iframe src="http://player.slideplayer.com/17/5280237/" width="300" height="200" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0" allowfullscreen></iframe><div style="padding:5px 0 12px"></div></div>
-                    </td>
-                    <td>
-                        <p class="abtlabel">Malaria Drugs Spreadsheet</p>
+                      <div style="width:300px"> <strong style="display:block;margin:12px 0 4px"><a href="static/docs/Malaria Presentation.pptx"  target="_blank">Malaria Drugs Spreadsheet:</a></strong></div>
+                      <div style="width:100%; height:100%"> <embed id="malaria_swf" src="static/docs/malaria presentation.swf" type="application/x-shockwave-flash" allowscriptaccess="true" style="display: inline-block; height: 285px; width: 380px;"><div style="padding:5px 0 12px"></div></div>
                     </td>
                 </tr>
             </table>
             <table id="reporttab">
                 <tr>
                     <td id="paperthumb">
-                        <div style="width:300px"> <strong style="display:block;margin:12px 0 4px"><a href="http://slideplayer.com/slide/5280237/" title="Malaria Drugs Spreadsheet Documentation. General Information Link to spreadsheet: https://docs.google.com/a/binghamton.edu/spreadsheet/cc c?key=0Ag8gS12PpxX2dF82NS1CLVhwd1RDSjhiMnFpd." target="_blank">Malaria Drugs Spreadsheet Documentation. General Information Link to spreadsheet: https://docs.google.com/a/binghamton.edu/spreadsheet/cc c?key=0Ag8gS12PpxX2dF82NS1CLVhwd1RDSjhiMnFpd.</a></strong><iframe src="http://player.slideplayer.com/17/5280237/" width="300" height="100" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0" allowfullscreen></iframe><div style="padding:5px 0 12px"></div></div>
-                    </td>
-                    <td>
-                        <p class="abtlabel">TB Drugs Spreadsheet</p>
+                        <div style="width:300px"> <strong style="display:block;margin:12px 0 4px"><a href="static/docs/TB Powerpoint.pptx" >TB Drugs Spreadsheet:</a></strong>
+                        <div style="width:100%; height:100%"><embed id="tb_drug_swf" src="static/docs/tb powerpoint.swf" type="application/x-shockwave-flash" allowscriptaccess="true" style="display: inline-block; height: 285px; width: 380px;"><div style="padding:5px 0 12px"></div></div>
                     </td>
                 </tr>
             </table>
             <table id="reporttab">
                 <tr>
                     <td id="paperthumb">
-                        <div style="width:300px"> <strong style="display:block;margin:12px 0 4px"><a href="http://slideplayer.com/slide/5280237/" title="Malaria Drugs Spreadsheet Documentation. General Information Link to spreadsheet: https://docs.google.com/a/binghamton.edu/spreadsheet/cc c?key=0Ag8gS12PpxX2dF82NS1CLVhwd1RDSjhiMnFpd." target="_blank">Malaria Drugs Spreadsheet Documentation. General Information Link to spreadsheet: https://docs.google.com/a/binghamton.edu/spreadsheet/cc c?key=0Ag8gS12PpxX2dF82NS1CLVhwd1RDSjhiMnFpd.</a></strong><iframe src="http://player.slideplayer.com/17/5280237/" width="300" height="200" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0" allowfullscreen></iframe><div style="padding:5px 0 12px"></div></div>
-                    </td>
-                    <td>
-                        <p class="abtlabel">HIV Drugs Spreadsheet</p>
+                        <div style="width:300px"><strong style="display:block;margin:12px 0 4px"><a  href="static/docs/HIV Powerpoint.pptx" >HIV Drugs Spreadsheet:</a></strong>
+                        <div style="width:100%; height:100%"><embed id="hiv_drug_swf" src="static/docs/hiv powerpoint.swf" type="application/x-shockwave-flash" allowscriptaccess="true" style="display: inline-block; height: 285px; width: 380px;"><div style="padding:5px 0 12px"></div></div>
                     </td>
                 </tr>
             </table>
@@ -121,4 +115,3 @@
     </div>
 </div>
 {% endblock %}
-
