--- a/templates/about.html
+++ b/templates/about.html
@@ -44,9 +44,7 @@
         <div class="contentbox">
             <p class="bluetxt">LEARN MORE:</p>
             <p class="txtcontent"><b>Check out</b> this video from Binghamton University for a brief presentation on the Global Health Impact project. Professor Nicole Hassoun introduces the Index, some possible uses for it, and explains the insight behind it. To view the whole video, see <a href="/resources" class="links">Resources.</a> For more videos about the Global Health Impact Index, visit our <a href="https://www.youtube.com/channel/UC9sq9bbtyeSlYWboYngXX_Q" class="links">YouTube channel</a></p>
-            <video width="100%" height="300" poster="static/img/videothumbnail.png" controls="">
-                <source src="static/img/binghamtonPresentation.mp4" type="video/mp4">
-            </video>
+            <iframe width="390" height="315" src="https://www.youtube.com/embed/HmZPHqz7xUQ" frameborder="0" allowfullscreen></iframe
         </div>
         <div class="contentbox">
             <p class="bluetxt">POTENTIAL USES:</p>
