cai_qi fix bug 9 and 10

--- a/templates/about.html
+++ b/templates/about.html
@@ -49,11 +49,15 @@
             </video>
         </div>
         <div class="contentbox">
+            <p class="bluetxtabout">EVALUATING DRUGS:</p>
+            <p class="txtcontent">There are three main considerations that go into evaluating each drug's potential impact.These are 1)the need for the drug, 2)its effectiveness,and 3)how many people who need a drug can access it around the world.In the Global Health Impact model,the drug impact scores feed into four Indexes that provide  essential information about the access to medicines problem.</p>
+        </div>
+        <div class="contentbox">
             <p class="bluetxt">POTENTIAL USES:</p>
             <p class="txtcontent">There are many ways Global Health Impact information might be useful to policy makers, researchers, companies investors, consumers, and other people interested in global health. For some information about potential uses of the Index, see <a href="/resources" class="links">Resources</a> and <a href="/news" class="links">News</a>. Together we can leverage the Global Health Impact Index to save millions of lives.</p>
         </div>
         <div class="contentbox">
-            <p class="bluetxt">MORE ABOUT THE INDEX:</p>
+            <p class="bluetxt">BINGHAMTON UNIVERSITY PROFESSOR LAUNCHES THE GLOBAL HEALTH INDEX:</p>
             <p class="txtcontent">Binghamton University’s Professor Nicole Hassoun launches a web tool known as the Global Health Index to track the impact of drugs worldwide. Check out this video from Binghamton University for a brief presentation on the Global Health Impact project. Professor Nicole Hassoun introduces the Index, some possible uses for it, and explains the insight behind it.</p><br>
             <iframe width="390" height="315" src="https://www.youtube.com/embed/HmZPHqz7xUQ" frameborder="0" allowfullscreen></iframe>
         </div>
