--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -182,6 +182,11 @@ body {
     color: #0083C4;
     font-family: 'Nunito', sans-serif;
 }
+.bluetxtabout {
+    font-size: 28px;
+    color: #0083C4;
+    font-family: 'Nunito', sans-serif;
+}
 .newsred {
     font-size: 24px;
     color: #FF7474;
