Fix the background image bug

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,13 @@
 {% endblock %}
 
 {% block frontimg %}
-<img id="back" src="static/img/background.png" />
+<img id="back" src="static/img/background.jpg" />
         <div id="frontcaption">
             <p class="cap">An Initiative to</p>
             <p class="cap2">EVALUATE & COMPARE</p>
             <p class="cap">Medicine's Global Health Impact</p>
         </div>
-    <img id="fore" src="static/img/foreground.png" />
+    <img id="fore" src="static/img/foreground.jpg" />
 {% endblock %}
 
 {% block content %}
