--- a/templates/disease.html
+++ b/templates/disease.html
@@ -364,4 +364,89 @@
     </div>
 </div>
 {% endif %}
+{% if disease == 4 %}
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+      google.charts.load('upcoming', {packages:["geochart","corechart"]});
+      google.charts.setOnLoadCallback(drawMap);
+      function drawMap() {
+        var data = google.visualization.arrayToDataTable({{ piedat |safe }});
+        var mapoptions = {
+        };
+        mapoptions['dataMode'] = 'regions';
+        mapoptions['colors'] = ['#548A9B', '#C0E188', '#EE8D7D'];
+        mapoptions['width'] = 450;
+        mapoptions['backgroundColor'] = '#ffffff';
+        var mapcontainer = document.getElementById('mapdiv');
+        var geomap = new google.visualization.GeoChart(mapcontainer);
+        drawcharts(0);
+
+        geomap.draw(data, mapoptions);
+        google.visualization.events.addListener(geomap, 'select', selectHandler);
+        function selectHandler() {
+            var selection = geomap.getSelection();
+            var diseases = ['HIV'];
+            var rownum = selection[0].row;
+            drawcharts(rownum);
+        };
+      };
+      function drawcharts(rownum) {
+        var clickdata = {{ clickdat |safe }};
+        var specdaly = clickdata[rownum];
+        var baroptions = {
+            height: 400,
+            width: 300,
+            top: 0,
+            legend:'none',
+            chartArea:{top:5,width:"300px",height:"400px"},
+            hAxis: {showTextEvery: 1, slantedText: true, slantedTextAngle: 45},
+        };
+
+
+        var bararray = new google.visualization.DataTable();
+            bararray.addColumn('string', 'Disease');
+            bararray.addColumn('number','DALY');
+            bararray.addColumn({type: 'string', role: 'style'});
+            bararray.addRows([['TB',specdaly[1],'color: #FFB31C'],['Malaria',specdaly[2],'color: #0083CA'],['HIV',specdaly[3],'color: #EF3E2E'],['Roundworm',specdaly[4],'color: #003452'],['Hookworm',specdaly[5],'color: #86AAB9'],['Whipworm',specdaly[6],'color: #CAEEFD'],['Schistosomiasis',specdaly[7],'color: #546675'],['Onchocerciasis',specdaly[8],'color: #8A5575'],['LF',specdaly[9],'color: #305516']]);
+        var bararray2 = new google.visualization.DataTable();
+            bararray2.addColumn('string', 'Disease');
+            bararray2.addColumn('number','DALY');
+            bararray2.addColumn({type: 'string', role: 'style'});
+            bararray2.addRows([['TB',specdaly[1],'color: #FFB31C'],['Malaria',specdaly[2],'color: #0083CA'],['HIV',specdaly[3],'color: #EF3E2E'],['Roundworm',specdaly[4],'color: #003452'],['Hookworm',specdaly[5],'color: #86AAB9'],['Whipworm',specdaly[6],'color: #CAEEFD'],['Schistosomiasis',specdaly[7],'color: #546675'],['Onchocerciasis',specdaly[8],'color: #8A5575'],['LF',specdaly[9],'color: #305516']]);
+
+        var vertbar = new google.visualization.ColumnChart(document.getElementById('vertbars'));
+        var vertbar2 = new google.visualization.ColumnChart(document.getElementById('vertbars2'));
+        vertbar.draw(bararray,baroptions);
+        vertbar2.draw(bararray2,baroptions);
+      };
+    </script>
+<div class="currentlocation">
+<p class="pagetitle">Index / <a href="/index/disease" class="pagetitle">Disease</a> / <a href="/index/disease/{{ speclocate.0 }}/{{ speclocate.1 }}" class="pagetitle">{{ speclocate.0 }}</a> / <a href="/index/drug/{{ speclocate.0 }}/{{ speclocate.1 }}" class="titlebold">{{ speclocate.2 }}</a></p>
+</div>
+<div class="row">
+    <div class="col-sm-6">
+        <div class="contentbox">
+            <p class="redtxt">DISEASE: <b>HIV/AIDS</b></p>
+            <p class="txtcontent">Every day more than 13,400 people are infected with AIDS. Essential medicines for HIV/AIDS help us reduce the global burden of disease. The map you see displays the aggregate need for treatment for HIV/AIDS. We also provide some graphs of our data on access to medicines for this disease and their efficacy. For additional information, please see the About the Index and Methodology.</p>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div width="400px" id="mapdiv"></div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-sm-6">
+        <div class="contentbox">
+            <p class="bluetxt" style="font-size: 22px;">HIV Treatment Coverage by region</p>
+            <div class="verticalbar" id="vertbars"></div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="contentbox">
+            <p class="bluetxt" style="font-size: 22px;">Select First Line Drug Efficacy for Adults</p>
+            <div class="verticalbar" id="vertbars2"></div>
+        </div>
+    </div>
+</div>
+{% endif %}
 {% endblock %}
