--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -104,17 +104,17 @@ body {
 .show {display:block;z-index: 1;}
 
 #navigator {
-    position: fixed;
+    position: absolute;
     display: block;
-    background-color: rgba(255,255,255,0.75);
+   /* background-color: rgba(255,255,255,0.75); */
 
     overflow-y: auto;
-    top: 85px;
-    width: 350px;
+    top: 0;
+    width: 300px;
     z-index: 1;
     padding-top: 10px;
-    left: 5%;
-    height: calc(100vw * 0.506 + 70px);
+    left: -25%;
+   /* height: calc(100vw * 0.506 + 70px); */
 }
 
 .dislist {
