--- a/templates/layout.html
+++ b/templates/layout.html
@@ -62,6 +62,9 @@
                 <a href="/index/disease">DISEASE</a>
             </div>
         </div>
+         </div>
+            <button id="home" onclick="location.href='http://127.0.0.1:5000/'" class="navbtn">HOME</button>
+        </div>
         </div>
     </div>
     <div class="par">
