--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -112,7 +112,7 @@ body {
     width: 300px;
     z-index: 1;
     padding-top: 10px;
-    left: -25%;
+    left: -28%;
     /*height: calc(100vw * 0.506 + 70px);*/
 }
 
@@ -248,9 +248,9 @@ body {
 #frontcaption {
     position: fixed;
     z-index: 1;
-    top: calc(100vw * 0.506 / 2);
+    top: calc(80vw * 0.506 / 2);
     right: 0%;
-    width: 50%;
+    width: 40%;
     background: linear-gradient(to right, rgba(255,255,255,0.15), rgba(255,255,255,0.7));
     color: #404040;
     padding-top: 15px;
@@ -359,12 +359,22 @@ body {
 }
 .height {
     z-index: 1;
-    top: calc(80vw * 0.506);
+    top: calc(66vw * 0.506);
     position: relative;
     background: #FFFFFF;
     overflow: hidden;
     width: 100vw !important;
 }
+
+.height1 {
+    z-index: 1;
+    top: calc(56vw * 0.506);
+    position: relative;
+    background: #FFFFFF;
+    overflow: hidden;
+    width: 100vw !important;
+}
+
 .foot {
     background-color: #404040;
     color: #FFFFFF;
