--- a/templates/company.html
+++ b/templates/company.html
@@ -42,12 +42,12 @@
 
 </script>
 <div class="currentlocation">
-<p class="pagetitle">Index / <a href="/index/company" class="pagetitle">Company</a> / <a href="/index/company/manufacturer/{{ speclocate.0 }}/all" class="pagetitle">Manufacturer</a> / <a href="/index/company/manufacturer/{{ speclocate.0 }}/all" class="pagetitle">{{ speclocate.0 }}</a> / <a href="/index/company/manufacturer/{{ speclocate.0 }}/{{ speclocate.2 }}" class="titlebold">{{ speclocate.1 }}</a></p>
+<p class="pagetitle">Index / <a href="/index/company" class="pagetitle">Company</a> / <a href="/index/company/manufacturer/{{ speclocate.0 }}/{{ speclocate.1 }}" class="pagetitle">Manufacturer</a> / <a href="/index/company/manufacturer/{{ speclocate.0 }}/{{ speclocate.1 }}" class="pagetitle">{{ speclocate.0 }}</a> / <a href="/index/company/manufacturer/{{ speclocate.0 }}/{{ speclocate.1 }}" class="titlebold firstLetterp">{{ speclocate.2 }}</a></p>
 </div>
 <div class="row">
     <div class="col-sm-6">
         <div class="contentbox">
-            <p class="redtxt">MANUFACTURER: <b>All</b></p>
+            <p class="redtxt">MANUFACTURER: <b class="firstLetterp">{{ speclocate.2 }}</b></p>
             <p class="txtcontent">The Global Health Impact Company Index evaluates how pharmaceutical companies’ drugs impact the health of populations devastated by disease. It is usually the case that those who are burdened most by these diseases live on less a dollar a day. Company scores are the combined total of the impact of their drugs on death and disability around the world. Three aspects are taken into consideration when determining country scores: The need for several important drugs in each country, the drugs’ effectiveness, and the number of people that can access them. For additional information, please see the Reports.</p>
         </div>
     </div>
@@ -177,11 +177,11 @@ Of course, some companies may raise their scores by simply acquiring the most ef
 
 </script>
 <div class="currentlocation">
-<p class="pagetitle">Index / <a href="/index/company" class="pagetitle">Company</a> / <a href="/index/company/patent/{{ speclocate.0 }}/all" class="pagetitle">Patent</a> / <a href="/index/company/patent/{{ speclocate.0 }}/all" class="pagetitle">{{ speclocate.0 }}</a> / <a href="/index/company/patent/{{ speclocate.0 }}/{{ speclocate.2 }}" class="titlebold">{{ speclocate.1 }}</a></p></div>
+<p class="pagetitle">Index / <a href="/index/company" class="pagetitle">Company</a> / <a href="/index/company/patent/{{ speclocate.0 }}/{{ speclocate.1 }}" class="pagetitle">Patent</a> / <a href="/index/company/patent/{{ speclocate.0 }}/{{ speclocate.1 }}" class="pagetitle">{{ speclocate.0 }}</a> / <a href="/index/company/patent/{{ speclocate.0 }}/{{ speclocate.1 }}" class="titlebold firstLetterp">{{ speclocate.2 }}</a></p></div>
 <div class="row">
     <div class="col-sm-6">
         <div class="contentbox">
-            <p class="redtxt">PATENT HOLDER: <b>ALL</b></p>
+            <p class="redtxt">PATENT HOLDER: <b class="firstLetterp">{{ speclocate.2 }}</b></p>
             <p class="txtcontent">The Global Health Impact Company Index evaluates how pharmaceutical companies’ drugs impact the health of populations devastated by disease. It is usually the case that those who are burdened most by these diseases live on less a dollar a day. Company scores are the combined total of the impact of their drugs on death and disability around the world. Three aspects are taken into consideration when determining country scores: The need for several important drugs in each country, the drugs’ effectiveness, and the number of people that can access them. For additional information, please see the Reports.</p>
         </div>
     </div>
