chore: added map-lebel template and imported wherever necessary
- created map-label.html template for labels describing map data
- imported under the maps of all existing disease pages

--- a/templates/disease.html
+++ b/templates/disease.html
@@ -216,6 +216,7 @@
     </div>
     <div class="col-sm-6">
         <div width="400px" id="mapdiv"></div>
+        {% include "map-label.html" %}
     </div>
 </div>
 <div class="row">
@@ -345,6 +346,7 @@
         <div class="contentbox">
             <p class="blueheader text-left">Disability Adjusted Life Years<br /><b>Lost</b>  to <b>{{ speclocate.2 }}</b> </p>
             <div width="400px" id="mapdiv"></div>
+            {% include "map-label.html" %}
         </div>
     </div>
 </div>
@@ -432,6 +434,7 @@
     </div>
     <div class="col-sm-6">
         <div width="400px" id="mapdiv"></div>
+        {% include "map-label.html" %}
     </div>
 </div>
 <div class="row">
