--- a/templates/layout.html
+++ b/templates/layout.html
@@ -142,17 +142,17 @@
                           <a href="#relocation" onclick="yearclick('manu2010','manu2013')" class="yearbutton">2010</a>
                           <div class="subnavdiv" id="manu2010">
                               <ul style="list-style-type:none;">
-                                  <li><a class="dislist" href="/index/company/manufacturer/2010/all#relocation_menu2010">All</a></li>
-                                  <li><a class="dislist" href="/index/company/manufacturer/2010/tb#relocation_menu2010">TB</a></li>
-                                  <li><a class="dislist" href="/index/company/manufacturer/2010/hiv#relocation_menu2010">HIV/AIDS</a></li>
+                                  <li><a class="dislist" href="/index/company/manufacturer/2010/all#relocation_manu2010">All</a></li>
+                                  <li><a class="dislist" href="/index/company/manufacturer/2010/tb#relocation_manu2010">TB</a></li>
+                                  <li><a class="dislist" href="/index/company/manufacturer/2010/hiv#relocation_manu2010">HIV/AIDS</a></li>
                               </ul>
                           </div><br>
                           <a href="#relocation" onclick="yearclick('manu2013','manu2010')" class="yearbutton">2013</a>
                           <div class="subnavdiv" id="manu2013">
                               <ul style="list-style-type:none;">
-                                  <li><a class="dislist" href="/index/company/manufacturer/2013/all#relocation_menu2013">All</a></li>
-                                  <li><a class="dislist" href="/index/company/manufacturer/2013/tb#relocation_menu2013">TB</a></li>
-                                  <li><a class="dislist" href="/index/company/manufacturer/2013/hiv#relocation_menu2013">HIV/AIDS</a></li>
+                                  <li><a class="dislist" href="/index/company/manufacturer/2013/all#relocation_manu2013">All</a></li>
+                                  <li><a class="dislist" href="/index/company/manufacturer/2013/tb#relocation_manu2013">TB</a></li>
+                                  <li><a class="dislist" href="/index/company/manufacturer/2013/hiv#relocation_manu2013">HIV/AIDS</a></li>
                               </ul>
                           </div>
                       </div></li>
