--- a/templates/company.html
+++ b/templates/company.html
@@ -21,8 +21,7 @@
         'chartArea':{top:0},
         legend:'none',
         slices: [{% for row in data1 %}{color: '{{row.2 |safe}}'},{% endfor %}{}],
-        is3D: 'true',
-        tooltip: { trigger: 'selection' }
+        is3D: 'true'
     };
     var data1 = google.visualization.arrayToDataTable([['Company','DALY']{% for row in data2 %},['{{row.0}}',{{row.1}}]{% endfor %}]);
     var options1 = {
@@ -30,8 +29,7 @@
         'chartArea':{top:0},
         legend:'none',
         slices: [{% for row in data2 %}{color: '{{row.2 |safe}}'},{% endfor %}{}],
-        is3D: 'true',
-        tooltip: { trigger: 'selection' }
+        is3D: 'true'
     };
 
     var chart1 = new google.visualization.PieChart(document.getElementById('manupie1'));
