--- a/templates/layout.html
+++ b/templates/layout.html
@@ -62,7 +62,7 @@
                 <a href="/index/disease">DISEASE</a>
           </div>
         </div>
-            <button id="home" onclick="location.href='http://127.0.0.1:5000/'" class="navbtn">HOME</button>
+            <button id="home" onclick="location.href='http://globalhealth.pythonanywhere.com/'" class="navbtn">HOME</button>
         </div>
     </div>
     <div class="par">
