--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,7 @@
     <head>
         <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
         <link rel="icon" href="{{ url_for('static',filename='img/logo.png') }}">
-        <meta charset="UTF-8">
+        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         {% block title %}{% endblock %}
         <link href="{{ url_for('static',filename='stylesheet.css') }}" rel="stylesheet">
