--- a/templates/error500.html
+++ b/templates/error500.html
@@ -1,34 +1,36 @@
 {% extends "layout.html" %}
 {% block title %}
 {% endblock %}
-{% block frontimg %}
-<img id="fore" src="/static/img/country.png" />
-{% endblock %}
-{% block content %}
 
+{% block frontimg %}
+<script>
+function myFunction() {
+  var pathArray = location.pathname.split( '/' );
+  var str = pathArray[2];
+  var img_url = '/static/img/' + str + '.jpg';
+  return img_url;
+}
+</script>
+
+<img id="fore" src="/static/img/drug.jpg" onload="this.onload=null; this.src=myFunction();" />
+{% endblock %}
+
+{% block content %}
 <div class="row" id="scrollhere" onload="func1()">
     <div class="col-sm-6">
-        <div class="contentbox">
           <img  src="/static/img/error500.png" />
-        </div>
     </div>
     <div class="col-sm-6">
-        <div id="regions_div" style="width:100%;min-width:400px;"></div>
     </div>
-
 </div>
 <div class="row">
     <div class="col-sm-6">
     </div>
     <div class="col-sm-6">
-        <p class="bluetxt text-center" id="cntname"></p>
-        <div id="horbars" style="margin:auto 0;"></div>
     </div>
 </div>
-
 <div class="row">
     <div class="col-sm-6">
   </div>
 </div>
-
 {% endblock %}
