shileli changes for error page

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block frontimg %}
-<img id="back" src="static/img/background1.png" />
+<img id="back" src="static/img/background1.jpg" />
         <div id="frontcaption">
             <p class="cap">An Initiative to</p>
             <p class="cap2">EVALUATE & COMPARE</p>
