Integrated 2015 data for Country

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -85,6 +85,7 @@
         <div class= "height1" id="relocation">  </div>
         <div class= "height1" id="relocation2010">  </div>
         <div class= "height1" id="relocation2013">  </div>
+        <div class= "height1" id="relocation2015">  </div>
         <div class= "height1" id="relocation_manu2010">  </div>
         <div class= "height1" id="relocation_manu2013">  </div>
         <div class= "height1" id="relocation_ph2010">  </div>
@@ -102,7 +103,7 @@
                   <li><p class="indxhead">Index</p></li>
                   <li><a class="hh1" href="/index/country">Country</a></li>
                   {% if navsub == 1 %}
-                  <a href="#relocation" onclick="yearclick('country2010','country2013')" class="yearbutton">2010</a>
+                  <a href="#relocation" onclick="new_yearclick('country2010','country2013','country2015')" class="yearbutton">2010</a>
                   <div class="subnavdiv" id="country2010">
                       <ul style="list-style-type:none;">
                           <li><a class="dislist" href="/index/country/2010/all#relocation2010">All</a></li>
@@ -117,7 +118,7 @@
                           <li><a class="dislist" href="/index/country/2010/whipworm#relocation2010">Whipworm</a></li>
                       </ul>
                   </div><br>
-                  <a href="#relocation" onclick="yearclick('country2013','country2010')" class="yearbutton">2013</a>
+                  <a href="#relocation" onclick="new_yearclick('country2013','country2010','country2015')" class="yearbutton">2013</a>
                   <div class="subnavdiv" id="country2013">
                       <ul style="list-style-type:none;">
                           <li><a class="dislist" href="/index/country/2013/all#relocation2013">All</a></li>
@@ -130,6 +131,22 @@
                           <li><a class="dislist" href="/index/country/2013/hookworm#relocation2013">Hookworm</a></li>
                           <li><a class="dislist" href="/index/country/2013/roundworm#relocation2013">Roundworm</a></li>
                           <li><a class="dislist" href="/index/country/2013/whipworm#relocation2013">Whipworm</a></li>
+
+                      </ul>
+                  </div><br>
+                  <a href="#relocation" onclick="new_yearclick('country2015','country2010','country2013')" class="yearbutton">2015</a>
+                  <div class="subnavdiv" id="country2015">
+                      <ul style="list-style-type:none;">
+                          <li><a class="dislist" href="/index/country/2015/all#relocation2015">All</a></li>
+                          <li><a class="dislist" href="/index/country/2015/malaria#relocation2015">Malaria</a></li>
+                          <li><a class="dislist" href="/index/country/2015/tb#relocation2015">TB</a></li>
+                          <li><a class="dislist" href="/index/country/2015/hiv#relocation2015">HIV/AIDS</a></li>
+                          <li><a class="dislist" href="/index/country/2015/onchocerciasis#relocation2015">Onchocerciasis</a></li>
+                          <li><a class="dislist" href="/index/country/2015/schistosomiasis#relocation2015">Schistosomiasis</a></li>
+                          <li><a class="dislist" href="/index/country/2015/lf#relocation2015">Lymphatic Filariasis</a></li>
+                          <li><a class="dislist" href="/index/country/2015/hookworm#relocation2015">Hookworm</a></li>
+                          <li><a class="dislist" href="/index/country/2015/roundworm#relocation2015">Roundworm</a></li>
+                          <li><a class="dislist" href="/index/country/2015/whipworm#relocation2015">Whipworm</a></li>
 
                       </ul>
                   </div>
